--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_login.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_login.xml
@@ -1,11 +1,12 @@
 <?xml version = "1.0" encoding = "utf-8"?>
 <RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
     xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
-    android:paddingRight = "@dimen/activity_horizontal_margin"
-    android:paddingTop = "@dimen/activity_vertical_margin">
+    android:layout_height = "match_parent" android:paddingLeft= "30dp"
+    android:paddingRight = "30dp"
+    android:paddingTop = "30dp"
+    android:paddingBottom = "30dp" tools:context = ".LoginActivity">
 
-    <TextView android:text = "BIenvenido" android:layout_width="wrap_content"
+    <TextView android:text = "Bienvenido" android:layout_width="wrap_content"
         android:layout_height = "wrap_content"
         android:id = "@+id/textview"
         android:textSize = "35dp"
@@ -15,7 +16,7 @@
     <TextView
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
-        android:text = "Digitador"
+        android:text = "Censador"
         android:id = "@+id/textView"
         android:layout_below = "@+id/textview"
         android:layout_centerHorizontal = "true"
@@ -24,7 +25,7 @@
         android:layout_marginBottom ="16dp"/>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
@@ -35,42 +36,45 @@
         android:layout_marginTop="46dp"
         android:layout_marginBottom="16dp"
         android:focusable="true"
-        android:hint="Nombre completo"
+        android:hint="Usuario"
+        android:textSize="22sp"
         android:minHeight="48dp"
-        android:textColorHighlight="#ff7eff15"
-        android:textColorHint="#ffff25e6" />
+        android:textColorHighlight="#F44336"
+        android:textColorHint="#FFFFFF" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:id="@+id/imageView"
         android:src="@drawable/ic_launcher"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edPhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_alignRight="@+id/editText"
+        android:layout_below="@+id/edUser"
+        android:layout_alignEnd="@+id/edUser"
+        android:layout_alignRight="@+id/edUser"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:ems="10"
-        android:hint="Celular"
+        android:textSize="22sp"
+        android:hint="Teléfono"
         android:minHeight="48dp"
-        android:textColorHint="#ffff299f" />
+        android:textColorHint="#FFFFFF"
+        android:inputType="phone"
+        android:layout_marginTop="5dp"/>
 
     <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Guardar datos"
-        android:id="@+id/button"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/textview"
-        android:layout_toStartOf="@+id/textview"
-        android:gravity="center"/>
+        android:id="@+id/btnSaveData"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Guardar mis datos"
+        android:layout_below="@+id/edPhone"
+        android:layout_marginTop="30dp"
+        android:gravity="center|center_horizontal"/>
 
 
 </RelativeLayout>
