--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
@@ -20,10 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
-            android:onClick="onClick"
-            android:text="@string/default_ui_no_logo" />
-
-
+            android:onClick="scanDocument"
+            android:text="@string/scan_document" />
     </LinearLayout>
 
     <FrameLayout
