--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
             android:onClick="onClick"
-            android:text="@string/default_ui_no_logo" />
+            android:text="@string/save_doc" />
 
 
     </LinearLayout>
