--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <!--<com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_email"
@@ -34,12 +35,14 @@
     <TextView
         android:id="@+id/tvCommunity"
         android:layout_width="352dp"
-        android:layout_height="26dp"
+        android:layout_height="30dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="64dp"
         android:text="Comunidad indígena"
-        android:textSize="18dp"
+        android:textSize="19dp"
+        android:textColor="@color/primary"
         android:textStyle="bold"
+        android:fontFamily="@font/comfortaa_bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -116,12 +119,14 @@
     <TextView
         android:id="@+id/tvAddress"
         android:layout_width="352dp"
-        android:layout_height="26dp"
+        android:layout_height="30dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="10dp"
         android:text="Vereda - Barrio"
-        android:textSize="18dp"
+        android:textSize="19dp"
+        android:textColor="@color/primary"
         android:textStyle="bold"
+        android:fontFamily="@font/comfortaa_bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiCommunity">
 
@@ -150,6 +155,34 @@
             tools:layout_editor_absoluteX="14dp"
             tools:layout_editor_absoluteY="68dp" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="331dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Integrantes de la familia"
+        android:textColor="@color/primary"
+        android:textSize="19dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.387"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tiAddress" />
+
+    <NumberPicker
+        android:id="@+id/numberpicker_main_picker"
+        android:layout_width="354dp"
+        android:layout_height="128dp"
+        android:theme="@style/NumberPickerText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.596"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.036" />
+
     <Button
         android:id="@+id/btnSaveForm"
         android:layout_width="wrap_content"
