--- a/pdf417MobiCustomUISample/src/main/res/values/styles.xml
+++ b/pdf417MobiCustomUISample/src/main/res/values/styles.xml
@@ -18,4 +18,8 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="NumberPickerText">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
