--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
@@ -7,6 +7,23 @@
     tools:context=".MainActivity"
     >
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            android:layout_width="match_parent"
+
+            android:layout_height="?attr/actionBarSize"
+            android:paddingStart="36dp"
+            app:title="@string/scan_document" />
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+
     <!--<com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_input_layout_email"
         android:layout_width="match_parent"
@@ -34,27 +51,29 @@
 
     <TextView
         android:id="@+id/tvCommunity"
-        android:layout_width="352dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="64dp"
-        android:text="Comunidad indígena"
-        android:textSize="19dp"
-        android:textColor="@color/primary"
-        android:textStyle="bold"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
+        android:text="Comunidad indígena"
+        android:textColor="@color/primary"
+        android:textSize="19dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
     </TextView>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiCommunity"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="73dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="36dp"
         android:hint="Seleccione una opción"
         app:hintTextAppearance="@style/TextLabel"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,15 +137,17 @@
 
     <TextView
         android:id="@+id/tvAddress"
-        android:layout_width="352dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="10dp"
-        android:text="Vereda - Barrio"
-        android:textSize="19dp"
-        android:textColor="@color/primary"
-        android:textStyle="bold"
+        android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
+        android:text="Vereda - Barrio"
+        android:textColor="@color/primary"
+        android:textSize="19dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiCommunity">
 
@@ -135,12 +156,12 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiAddress"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="73dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="39dp"
-        android:hint="Seleccione una opción"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="36dp"
 
+        android:hint="Seleccione una opción"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.304"
         app:layout_constraintStart_toStartOf="parent"
@@ -158,9 +179,11 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="331dp"
+        android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Integrantes de la familia"
         android:textColor="@color/primary"
@@ -172,16 +195,73 @@
         app:layout_constraintTop_toBottomOf="@+id/tiAddress" />
 
     <NumberPicker
-        android:id="@+id/numberpicker_main_picker"
+        android:id="@+id/npFamilyIntegrants"
         android:layout_width="354dp"
         android:layout_height="128dp"
         android:theme="@style/NumberPickerText"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.596"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.036" />
+
+
+    <TextView
+        android:id="@+id/tvFamilyIntegrantsCount"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="36dp"
+        android:fontFamily="@font/roboto_regular"
+        android:text="1021"
+        android:textAlignment="gravity"
+        android:textColor="@color/accent"
+        android:textSize="19dp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvFamilyIntegrants" />
+
+    <TextView
+        android:id="@+id/tvFamilyIntegrants"
+        android:layout_width="match_parent"
+        android:layout_height="28dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginEnd="36dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Ficha familiar"
+        android:textColor="@color/primary"
+        android:textSize="19dp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/npFamilyIntegrants" />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/continuousSlider"
+        android:layout_width="match_parent"
+        android:layout_height="88dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="36dp"
+        android:stepSize="1"
+
+        android:value="0"
+        android:valueFrom="0"
+        android:valueTo="15"
+        app:labelBehavior="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.739"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/btnSaveForm"
