--- a/pdf417MobiCustomUISample/src/main/res/values/colors.xml
+++ b/pdf417MobiCustomUISample/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="buttonBackgroundNormal">#AAFFFFFF</color>
     <color name="buttonBackgroundPressed">#CCFFFFFF</color>
 
-    <color name="accent">#80fabb</color>
+    <color name="accent">#006c45</color>
     <color name="primary">#006c45</color>
     <color name="primaryDark">#002112</color>
     <color name="white">#fff</color>
