buttons style was implemented on main_layout and picker_data_layout

--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
@@ -194,20 +194,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiAddress" />
 
-    <NumberPicker
-        android:id="@+id/npFamilyIntegrants"
-        android:layout_width="354dp"
-        android:layout_height="128dp"
-        android:theme="@style/NumberPickerText"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.596"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.036" />
-
-
     <TextView
         android:id="@+id/tvFamilyIntegrantsCount"
         android:layout_width="match_parent"
@@ -232,20 +218,20 @@
         android:layout_width="match_parent"
         android:layout_height="28dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="92dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Ficha familiar"
         android:textColor="@color/primary"
-        android:textSize="19dp"
+        android:textSize="19sp"
         android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/npFamilyIntegrants" />
+        app:layout_constraintTop_toBottomOf="@+id/sliderMembersFamily" />
 
     <com.google.android.material.slider.Slider
-        android:id="@+id/continuousSlider"
+        android:id="@+id/sliderMembersFamily"
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:layout_marginStart="36dp"
@@ -263,19 +249,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:ignore="MissingConstraints" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSaveForm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="116dp"
-        android:text="Guardar"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="36dp"
+        android:shadowRadius="4"
+        android:text="Guardar datos"
+        app:icon="@drawable/ic_baseline_save_24"
+        app:iconGravity="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvFamilyIntegrantsCount"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
