combo box user data was created

--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_user_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_user_data.xml
@@ -22,68 +22,45 @@
             app:title="@string/scan_document" />
     </com.google.android.material.appbar.AppBarLayout>
 
+    <!--PARENTESCO-->
 
-
-    <!--<com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input_layout_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:hint="@string/scan_document"
-        app:startIconDrawable="@drawable/bg_button"
-        app:startIconTint="@drawable/bg_button"
-        style="@style/Widget.AppCompat.EditText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            />
-
-    </com.google.android.material.textfield.TextInputLayout>
-    -->
 
     <TextView
-        android:id="@+id/tvCommunity"
+        android:id="@+id/tvRelationship"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
-        android:text="Comunidad indígena"
+        android:text="Parentesco"
         android:textColor="@color/primary"
         android:textSize="19dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
     </TextView>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tiCommunity"
+        android:id="@+id/tiRelationship"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="73dp"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="36dp"
         android:hint="Seleccione una opción"
         app:hintTextAppearance="@style/TextLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.193"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCommunity"
+        app:layout_constraintTop_toBottomOf="@+id/tvRelationship"
         tools:ignore="MissingConstraints">
 
         <AutoCompleteTextView
-            android:id="@+id/acCommunity"
+            android:id="@+id/acRelationship"
             android:layout_width="match_parent"
             android:layout_height="59dp"
             android:inputType="none"
@@ -91,191 +68,148 @@
             tools:layout_editor_absoluteY="68dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--&lt;!&ndash;PARENTESCO&ndash;&gt;
+    <!--ESCOLARIDAD-->
 
     <TextView
-        android:id="@+id/tvAddress"
-        android:layout_width="352dp"
-        android:layout_height="26dp"
+        android:id="@+id/tvScholarship"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="10dp"
-        android:text="Parentesco"
-        android:textSize="18dp"
+        android:layout_marginEnd="36dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Escolaridad"
+        android:textColor="@color/primary"
+        android:textSize="19dp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tiCommunity">
+        app:layout_constraintTop_toBottomOf="@+id/tiRelationship">
 
     </TextView>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tiAddress"
+        android:id="@+id/tiScholarship"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="73dp"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
+
+        android:layout_marginEnd="36dp"
         android:hint="Seleccione una opción"
-        app:hintTextAppearance="@style/TextLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.304"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddress"
+        app:layout_constraintTop_toBottomOf="@+id/tvScholarship"
         tools:ignore="MissingConstraints">
 
         <AutoCompleteTextView
-            android:id="@+id/acAddress"
+            android:id="@+id/acScholarship"
             android:layout_width="match_parent"
             android:layout_height="59dp"
             android:inputType="none"
             tools:layout_editor_absoluteX="14dp"
             tools:layout_editor_absoluteY="68dp" />
-    </com.google.android.material.textfield.TextInputLayout>-->
-
-    <!--VEREDA O BARRIO-->
-
-    <!--PARENTESCO-->
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvAddress"
+        android:id="@+id/tvProfession"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
-        android:text="Vereda - Barrio"
+        android:text="Profesión"
         android:textColor="@color/primary"
         android:textSize="19dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tiCommunity">
+        app:layout_constraintTop_toBottomOf="@+id/tiScholarship" />
 
-    </TextView>
-
+    <!--ESTADO CIVIL-->
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tiAddress"
+        android:id="@+id/tiProfession"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="73dp"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="36dp"
-
         android:hint="Seleccione una opción"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.304"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAddress"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfession"
         tools:ignore="MissingConstraints">
 
         <AutoCompleteTextView
-            android:id="@+id/acAddress"
+            android:id="@+id/acProfession"
             android:layout_width="match_parent"
             android:layout_height="59dp"
-
+            android:inputType="none"
             tools:layout_editor_absoluteX="14dp"
             tools:layout_editor_absoluteY="68dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvCivilState"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
-        android:text="Integrantes de la familia"
+        android:text="Estado civíl"
         android:textColor="@color/primary"
         android:textSize="19dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.387"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tiAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/tiProfession" />
 
-    <NumberPicker
-        android:id="@+id/npFamilyIntegrants"
-        android:layout_width="354dp"
-        android:layout_height="128dp"
-        android:theme="@style/NumberPickerText"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.596"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.036" />
-
-
-    <TextView
-        android:id="@+id/tvFamilyIntegrantsCount"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tiCivilState"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="73dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="36dp"
-        android:fontFamily="@font/roboto_regular"
-        android:text="1021"
-        android:textAlignment="gravity"
-        android:textColor="@color/accent"
-        android:textSize="19dp"
-        android:textStyle="bold"
-        android:visibility="visible"
+        android:hint="Seleccione una opción"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvFamilyIntegrants" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCivilState"
+        tools:ignore="MissingConstraints">
 
-    <TextView
-        android:id="@+id/tvFamilyIntegrants"
-        android:layout_width="match_parent"
-        android:layout_height="28dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="36dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Ficha familiar"
-        android:textColor="@color/primary"
-        android:textSize="19dp"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/npFamilyIntegrants" />
+        <AutoCompleteTextView
+            android:id="@+id/acCivilState"
+            android:layout_width="match_parent"
+            android:layout_height="59dp"
+            android:inputType="none"
+            tools:layout_editor_absoluteX="14dp"
+            tools:layout_editor_absoluteY="68dp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.slider.Slider
-        android:id="@+id/continuousSlider"
-        android:layout_width="match_parent"
-        android:layout_height="88dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="36dp"
-        android:stepSize="1"
-
-        android:value="0"
-        android:valueFrom="0"
-        android:valueTo="15"
-        app:labelBehavior="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.739"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:ignore="MissingConstraints" />
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnSaveForm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="116dp"
-        android:text="Guardar"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="36dp"
+        android:onClick="scanDocument"
+        android:text="@string/save_doc"
+        app:cornerRadius="20dp"
+        app:icon="@drawable/ic_baseline_save_24"
+        app:iconGravity="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tiCivilState"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
