--- a/pdf417MobiCustomUISample/src/main/res/values/colors.xml
+++ b/pdf417MobiCustomUISample/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="black">#000</color>
     <color name="background_custom_skin">#77000000</color>
     <color name="buttonBorder">#222222</color>
     <color name="buttonBackgroundNormal">#AAFFFFFF</color>
