--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
@@ -147,6 +147,7 @@
         android:layout_width="match_parent"
         android:layout_height="28dp"
         android:layout_marginStart="36dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Ficha familiar"
@@ -155,7 +156,7 @@
         android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sliderMembersFamily" />
 
