--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
@@ -10,13 +10,25 @@
         tools:context=".MainActivity"
         >
 
+        <TextView
+            android:id="@+id/tvFamilyIntegrantsCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="0/0"
+            android:textAlignment="center"
+            android:textSize="30dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnDefaultActivity"
             style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginStart="36dp"
-            android:layout_marginTop="268dp"
+            android:layout_marginTop="132dp"
             android:layout_marginEnd="36dp"
             android:onClick="scanDocument"
             android:text="@string/scan_document"
@@ -26,16 +38,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvFamilyIntegrantsCount"
             tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="O"
+            android:layout_marginTop="140dp"
             android:fontFamily="@font/comfortaa_bold"
+            android:text="O"
             android:textAlignment="center"
             android:textSize="18dp"
             app:layout_constraintTop_toBottomOf="@+id/btnDefaultActivity"
@@ -59,7 +71,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.056"
+            app:layout_constraintVertical_bias="0.38"
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
