--- a/pdf417MobiCustomUISample/src/main/res/values/styles.xml
+++ b/pdf417MobiCustomUISample/src/main/res/values/styles.xml
@@ -43,4 +43,14 @@
 
     </style>
 
+    <style name="AppTheme.CardView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <!-- por defecto se aplica el colorSurface del tema-->
+        <!--<item name="cardBackgroundColor">@android:color/white</item>-->
+        <item name="cardCornerRadius">4dp</item>
+        <item name="cardElevation">4dp</item>
+        <item name="cardUseCompatPadding">true</item>
+    </style>
+
 </resources>
