sharedpreferences now can save familyNucleusScanned and membersFamilyCount

--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_user_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_user_data.xml
@@ -17,44 +17,20 @@
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
 
-            android:layout_height="?attr/actionBarSize"
-            android:paddingStart="36dp"/>
+            android:layout_height="150dp"
+            android:paddingStart="36dp" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cvPerson"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="20dp"
-        android:layout_margin="10dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardMaxElevation="12dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true">
-
-        <TextView
-            android:id="@+id/tvInfoPerson"
-            android:text="@string/app_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="bottom|center_horizontal"
-            android:textSize="16sp"
-            android:textStyle="bold"
-        />
-
-    </com.google.android.material.card.MaterialCardView>
-
     <!--PARENTESCO-->
+
     <TextView
         android:id="@+id/tvRelationship"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="Parentesco"
@@ -217,7 +193,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnSaveForm"
+        android:id="@+id/btnSaveUserData"
         style="@style/Widget.MaterialComponents.Button.Icon"
         android:layout_width="match_parent"
         android:layout_height="55dp"
@@ -234,6 +210,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiCivilState"
         tools:ignore="MissingConstraints" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cvPerson"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_marginTop="9dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
+        app:cardMaxElevation="12dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="@+id/appBarLayout"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        tools:layout_editor_absoluteX="33dp">
+
+        <TextView
+            android:id="@+id/tvInfoPerson"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/app_name"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+    </com.google.android.material.card.MaterialCardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
