--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_pick_data.xml
@@ -86,9 +86,9 @@
                     android:layout_gravity="bottom|center_horizontal"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="20dp"
-                    android:text="NUCLEO FAMILAR"
+                    android:text="FICHA FAMILIAR #12"
                     android:textSize="16sp"
-                    android:textColor="@color/accent"
+                    android:textColor="@color/teal_600"
                     android:textStyle="bold" />
 
             </com.google.android.material.card.MaterialCardView>
@@ -193,43 +193,35 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tiAddress" />
 
+
             <TextView
                 android:id="@+id/tvFamilyIntegrantsCount"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginStart="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="36dp"
                 android:fontFamily="@font/roboto_regular"
-                android:text="1021"
+                android:text="0"
                 android:textAlignment="gravity"
                 android:textColor="@color/accent"
-                android:textSize="19dp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.097"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvFamilyIntegrants" />
+                app:layout_constraintHorizontal_bias="0.029"
+                app:layout_constraintStart_toEndOf="@+id/tvFamilyIntegrants"
+                app:layout_constraintTop_toTopOf="@+id/tvFamilyIntegrants" />
 
-            <TextView
+            <ImageView
+
                 android:id="@+id/tvFamilyIntegrants"
-                android:layout_width="match_parent"
-                android:layout_height="28dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="@font/comfortaa_bold"
-                android:text="Ficha familiar"
-                android:textColor="@color/primary"
-                android:textSize="19sp"
-                android:textStyle="bold"
+                android:src="@drawable/ic_baseline_family_restroom_24"
                 android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sliderMembersFamily" />
-
+                app:layout_constraintTop_toBottomOf="@+id/sliderMembersFamily"></ImageView>
 
             <TextView
                 android:id="@+id/textView"
@@ -273,13 +265,19 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnSaveForm"
                 style="@style/Widget.MaterialComponents.Button.Icon"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
+                android:layout_width="wrap_content"
+                android:layout_height="64dp"
                 android:layout_marginStart="36dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="36dp"
-                android:shadowRadius="4"
-                android:text="Guardar datos"
-                app:iconGravity="textStart"
+                android:layout_marginBottom="48dp"
+                app:cornerRadius="30dp"
+                app:iconGravity="textEnd"
+                android:paddingStart="27dp"
+                app:icon="@drawable/ic_baseline_keyboard_arrow_right_24"
+                android:text="Continuar"
+                android:elevation="0dp"
+                android:stateListAnimator="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
