export to xls was solved, backbutton was disabled

--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_main.xml
@@ -86,13 +86,13 @@
                     tools:layout_editor_absoluteX="33dp">
 
                     <TextView
-                        android:id="@+id/tvInfoPerson"
+                        android:id="@+id/tvFamilyRecord"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom|center_horizontal"
                         android:layout_marginTop="20dp"
                         android:layout_marginBottom="20dp"
-                        android:text="FICHA FAMILIAR #12"
+                        android:text="FICHA FAMILIAR #1"
                         android:textColor="@color/teal_600"
                         android:textSize="16sp"
                         android:textStyle="bold" />
