excel document has new columns

--- a/pdf417MobiCustomUISample/src/main/res/layout/activity_result.xml
+++ b/pdf417MobiCustomUISample/src/main/res/layout/activity_result.xml
@@ -96,7 +96,7 @@
         android:layout_marginEnd="50dp"
         android:shadowRadius="24"
         app:cornerRadius="30dp"
-        android:text="ContinuaR"
+        android:text="Continuar"
         app:iconGravity="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
